[package]
name = "pecube_conv"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de"]
description = "Convert Pecube binary files"
keywords = ["simulation", "science", "geology", "computing", "convert"]
categories = ["Science", "Geology"]
edition = "2018"

[dependencies]
log = "0.4"
log4rs = "0.9"
byteorder = "1"
# glob = "0.3.0"
# structopt = "0.3"

[profile.release]
lto = true
